2000-09-30  Martin Baulig  <baulig@suse.de>

	* gnome-x-checks.m4: Switch to pkg-config to check for GTK+ 2.0;
	Removed all `gnome_cv_passdown_x_*' variables and `USE_DEVGTK'.

	* gnome-common.m4 (GNOME_COMMON_INIT): Added the always-false
	INSIDE_GNOME_COMMON automake conditional.
	(GNOME_GTKDOC_CHECK): New macro.
	(GNOME_DEBUG_CHECK): New macro.

Thu Aug 24 02:28:57 2000  George Lebl <jirka@5z.com>

	* gnome-x-checks.m4: use the correct name in AC_PROVIDE

2000-08-06  Martin Baulig  <baulig@suse.de>

	* gnome-x-checks.m4 (GNOME_X_CHECKS): Renamed
	to GNOME2_X_CHECKS.

2000-07-24  Martin Baulig  <martin@home-of-linux.org>

	* autogen.sh: Removed some old crap in it.
	* aclocal-include.m4: Removed.

	* gnome-x-checks.m4: Check for GTK+ 2.0.

2000-07-24  Martin Baulig  <baulig@suse.de>

	* autogen.sh: Make it work with AM_GNOME2_GETTEXT.
	* check-utmp.m4: New file.

2000-07-24  Martin Baulig  <baulig@suse.de>

	Synced with gnome-libs/gnome-data.

2000-06-09  Martin Baulig  <martin@home-of-linux.org>

	* gnome-common.m4: We need this here as well.

2000-05-29  Martin Baulig  <baulig@suse.de>

	* Makefile.am: New file. Install this stuff into
	`$(datadir)/aclocal/gnome2-macros'.

	* gnome.m4: New file. Copied from `hack-macros' dir.

	* autogen.sh: New file. Copied from `macros' dir.
