@@ -1,3 +1,7 @@
+2000-11-21  Martin Baulig  <baulig@suse.de>
+
+	* gnome-support.m4, need-declaration.m4: Removed.
+
 2000-09-30  Martin Baulig  <baulig@suse.de>
 
 	* gnome-x-checks.m4: Switch to pkg-config to check for GTK+ 2.0;
